<resources>
    <string name="app_name">CareerGrowApp</string>
    <string name="sign_out">Sign Out</string>
    <string name="cancel_button">Cancel</string>
    <string name="save_button">Save</string>
    <string name="welcome"> Welcome Chintia </string>
    <string name="careergrow">CareerGrow</string>
    <string name="tagline_app">Your AI Career Preparation</string>

    //register
    <string name="title_signup_page">Complete the data below</string>
    <string name="signup"> Register </string>
    <string name="option_register">Belum punya akun ? Register</string>
    <string name="option_login">Sudah punya akun ? Login</string>

    //login
    <string name="login"> Login </string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="logout"> Logout </string>

    //hint
    <string name="hint_register_password"> Input your password </string>
    <string name="hint_register_email"> Input your email </string>
    <string name="hint_register_name"> Input your name </string>

    //auth
    <string name="retry">Try Again</string>
    <string name="password_auth">Password cannot be less than 8 characters</string>
    <string name="camera_failed">Failed to open the camera</string>
    <string name="email_rule">Email must not be empty</string>
    <string name="password_rule">Password must not be empty</string>

    //menu
    <string name="menu_setting"> Settings </string>
    <string name="menu_refresh">Refresh Story</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_maps">Map</string>

    <string name="default_web_client_id"></string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>

    //cardview
    <string name="current_date">14 Jan 2024</string>

</resources>